--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
      <link rel="shortcut icon" href="/src/assets/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ahsan Gilman</title>
+    <title>MD Abu Ahsan Gilman</title>
   </head>
   <body>
     <div id="root"></div>
